--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/react": "^3.3.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
+    "@tinacms/auth": "^1.0.4",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "astro": "^4.6.1",
+    "next-tinacms-cloudinary": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tinacms": "^1.6.1",
