--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 GITHUB_BRANCH=<YOUR_GITHUB_BRANCH>
 TINA_TOKEN=<YOUR_TINA_TOKEN>
+TINA_SEARCH_TOKEN=<YOUR_TINA_SEARCH_TOKEN>
 PUBLIC_TINA_CLIENT_ID=<YOUR_PUBLIC_TINA_CLIENT_ID>
 CLOUDINARY_CLOUD_NAME=<YOUR_CLOUDINARY_CLOUD_NAME>
 CLOUDINARY_API_KEY=<YOUR_CLOUDINARY_API_KEY>
